Grace/tests/gibbs/errors/t041.grace
// ERROR = P1031
method foo(a)bar(b,*) {
    print(a)
    print(b)
    for (c) do {v->
        print "In c: {v}"
    }
}
